@@ -38,31 +38,37 @@ gdb_test "disconnect" ".*"
 #
 
 gdb_test "show remote memory-write-packet-size" \
-	"The memory-write-packet-size is 0 \\(default\\). The actual limit will be further reduced dependent on the target\." \
+	"The memory-write-packet-size on future remote targets is 0 \\(default\\). The actual limit will be further reduced dependent on the target\." \
 	"write-packet default"
 
 gdb_test "set remote memory-write-packet-size" \
-	"Argument required .integer, `fixed' or `limited'.\." \
+	"Argument required .integer, \"fixed\" or \"limit\".\." \
 	"set write-packet - NULL"
 
-gdb_test_no_output "set remote memory-write-packet-size 20"
+gdb_test "set remote memory-write-packet-size 20" \
+	"The memory-write-packet-size on future remote targets is set to \"20\"."
+
 gdb_test "show remote memory-write-packet-size" \
-	"The memory-write-packet-size is 20. The actual limit will be further reduced dependent on the target\." \
+	"The memory-write-packet-size on future remote targets is 20. The actual limit will be further reduced dependent on the target\." \
 	"set write-packet - small"
 
-gdb_test_no_output "set remote memory-write-packet-size 1"
+gdb_test "set remote memory-write-packet-size 1" \
+	"The memory-write-packet-size on future remote targets is set to \"1\"."
+
 gdb_test "show remote memory-write-packet-size" \
-	"The memory-write-packet-size is 1. The actual limit will be further reduced dependent on the target\." \
+	"The memory-write-packet-size on future remote targets is 1. The actual limit will be further reduced dependent on the target\." \
 	"set write-packet - very-small"
 
-gdb_test_no_output "set remote memory-write-packet-size 0"
+gdb_test "set remote memory-write-packet-size 0" \
+	"The memory-write-packet-size on future remote targets is set to \"0\"."
+
 gdb_test "show remote memory-write-packet-size" \
-	"The memory-write-packet-size is 0 \\(default\\). The actual limit will be further reduced dependent on the target\." \
+	"The memory-write-packet-size on future remote targets is 0 \\(default\\). The actual limit will be further reduced dependent on the target\." \
 	"write-packet default again"
 
 set test "set remote memory-write-packet-size fixed"
 gdb_test_multiple $test $test {
-    -re "Change the packet size. .y or n. " {
+    -re "Change the packet size for future remote targets. .y or n. " {
 	gdb_test_multiple "y" $test {
 	    -re "$gdb_prompt $" {
 		pass $test
@@ -70,13 +76,16 @@ gdb_test_multiple $test $test {
 	}
     }
 }
+
 gdb_test "show remote memory-write-packet-size" \
-	"The memory-write-packet-size is 0 \\(default\\). Packets are fixed at 16384 bytes\." \
+	"The memory-write-packet-size on future remote targets is 0 \\(default\\). Packets are fixed at 16384 bytes\." \
 	"write-packet default fixed"
 
-gdb_test_no_output "set remote memory-write-packet-size limit"
+gdb_test "set remote memory-write-packet-size limit" \
+	"The memory-write-packet-size on future remote targets is set to \"limit\"."
+
 gdb_test "show remote memory-write-packet-size" \
-	"The memory-write-packet-size is 0 \\(default\\). The actual limit will be further reduced dependent on the target\." \
+	"The memory-write-packet-size on future remote targets is 0 \\(default\\). The actual limit will be further reduced dependent on the target\." \
 	"write-packet default limit again"
 
 #
@@ -88,7 +97,8 @@ proc gdb_load_timed {executable class writesize} {
     set test "timed download `[file tail $executable]' - $class, $writesize"
 
     if {$writesize != ""} {
-	gdb_test_no_output "set remote memory-write-packet-size $writesize" \
+	gdb_test "set remote memory-write-packet-size $writesize" \
+	    "The memory-write-packet-size on future remote targets is set to \"$writesize\"." \
 	    "$test - set packet size"
 
 	send_gdb "set remote memory-write-packet-size $class\n"
@@ -129,8 +139,6 @@ proc gdb_load_timed {executable class writesize} {
     pass $test
 }
 
-clean_restart $binfile
-
 # These download tests won't actually download anything on !is_remote
 # target boards, but we run them anyway because it's simpler, and
 # harmless.
@@ -155,6 +163,8 @@ gdb_load_timed $binfile "limit" 0
 # Get the size of random_data table (defaults to 48K).
 set sizeof_random_data [get_sizeof "random_data" 48*1024]
 
+clean_restart $binfile
+
 #
 # Part THREE: Check the upload behavour
 #
@@ -178,10 +188,11 @@ if {$sizeof_random_data > 16380} {
 
 # Read a chunk just larger than the packet size (reduce the packet
 # size to make life easier)
-gdb_test_no_output "set remote memory-read-packet-size 16"
+gdb_test "set remote memory-read-packet-size 16" \
+	"The memory-read-packet-size on the current remote target is set to \"16\"."
 
 gdb_test "show remote memory-read-packet-size" \
-	"The memory-read-packet-size is 16. Packets are limited to 20 bytes."
+	"The memory-read-packet-size on the current remote target is 16. Packets are limited to 20 bytes."
 gdb_test "x/17ub random_data" \
 	"<random_data>:\[ \t\]+60\[ \t\]+74\[ \t\]+216\[ \t\]+38\[ \t\]+149\[ \t\]+49\[ \t\]+207\[ \t\]+44.*<random_data\\+8>:\[ \t\]+124\[ \t\]+38\[ \t\]+93\[ \t\]+125\[ \t\]+232\[ \t\]+67\[ \t\]+228\[ \t\]+56.*<random_data\\+16>:\[ \t\]+161"
 
